K1J-1606: Added delete from cs